進め方をREADME.mdにまとめた

--- a/rule_and_chapter2.ipynb
+++ b/rule_and_chapter2.ipynb
@@ -14,35 +14,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ノートのルール\n",
-    "\n",
-    "## Markdown Cell\n",
-    "* セクション    \n",
-    "jupyter notebookのextensionのtable content(2)を使用して目次とセクションを作成する。次のルールに則って作成する。  \n",
-    "Pythonによるデータ分析での見出しレベルより１だけ上のレベルを使用する。例えば、本誌のサブセクションはnotebook上ではセクションの見出しレベルで表す。\n",
-    "\n",
-    "* ページ番号  \n",
-    "本誌上部に印字されている番号を使う（ビューアはPDFの通し番号ではなく印字されている番号を使用しているため）\n",
-    "\n",
-    "## Code Cell\n",
-    "* セルの戻り値について  \n",
-    "そのセルで最後に評価された値がOutとして表示される\n",
-    "\n",
-    "* セルの分割  \n",
-    "１つのセルで出力結果が複数あると見づらいので、出力ごとにセルを分割する。ただし、結果をまとめたい場合はこの限りではない\n",
-    "\n",
-    "## Reference\n",
-    "あとで確認したいクラスやメソッドは、それらをまとめて記述するためのMarkdowm Cellを作成したり、コード中にコメントを記述するなどして必ず記録すること。名前と簡単な概要を記述する。メソッドであれば所属するクラスと戻り値も記述する。\n",
-    "\n",
-    "## 資料\n",
-    "本誌で使用されているプログラムやデータは以下のGithubのリポジトリで公開されている  \n",
-    "[http://github.com/pydata/pydata-book](http://github.com/pydata/pydata-book)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## package reference\n",
     "* **pandas.Series**  \n",
     "軸ラベル付けされた1次元のndarray\n",
@@ -100,9 +71,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## P17　Python標準機能を使用したタイムゾーン情報の集計\n",
     "タイムゾーンのうち最も頻度の高いものを調べる"
@@ -138,7 +107,10 @@
    "cell_type": "code",
    "execution_count": 69,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -177,7 +149,10 @@
    "cell_type": "code",
    "execution_count": 71,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -257,9 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## P20　pandasを使用したタイムゾーン情報の集計"
    ]
@@ -268,7 +241,10 @@
    "cell_type": "code",
    "execution_count": 74,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -2297,9 +2273,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "frameにgroupbyを適応して、frameのレコードをタイムゾーンと稼働OSの組み合わせごとにグループ分けする"
    ]
@@ -2662,7 +2636,10 @@
    "cell_type": "code",
    "execution_count": 90,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -4858,9 +4835,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "女性評価の高い順に並び替える。"
    ]
@@ -8923,7 +8898,10 @@
    "cell_type": "code",
    "execution_count": 123,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -11718,7 +11696,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -11753,7 +11734,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.7.4"
   },
   "nav_menu": {},
   "toc": {
@@ -11785,5 +11766,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
